pi/cluster/apps/nest-exporter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-exporter
  namespace: nest-exporter
  labels:
    app: nest-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-exporter
  template:
    metadata:
      labels:
        app: nest-exporter
    spec:
      containers:
      - name: nest-exporter
        image: theeadie/nest-exporter:0.2.9@sha256:ad075d3af047f85e4860a90a2bdd557607e0eb2fd7041e4d4a765018023db2a0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
