pi/cluster/apps/nest-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nest-exporter
  namespace: nest-exporter
spec:
  selector:
    app: nest-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 80
